src/objects/Customer_Generated_SREC__c.object
<CustomObject>
    <description>Customer Generated SREC</description>
    <fields>
        <fullName>Calendar_Compliance_Year__c</fullName>
        <description>Calendar Compliance Year</description>
        <formula>RIGHT(Vintage__c ,4)</formula>
        <inlineHelpText>Calendar Compliance Year</inlineHelpText>
        <label>Calendar Compliance Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SREC_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Originating Customer Contract for this SREC</description>
        <inlineHelpText>Originating Customer Contract for this SREC</inlineHelpText>
        <label>Customer SREC Contract</label>
        <referenceTo>Customer_SREC_Contract__c</referenceTo>
        <relationshipLabel>Customer Generated SRECs</relationshipLabel>
        <relationshipName>Customer_Generated_SRECs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Paid__c</fullName>
        <description>Date Customer was Paid by Astrum Solar for SREC</description>
        <inlineHelpText>Date Customer was Paid by Astrum Solar for SREC</inlineHelpText>
        <label>Date Customer Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Confirmation_Date__c</fullName>
        <description>Utility SREC Delivery Transfer Confirmation Date</description>
        <formula>Utility_SREC_Delivery__r.Transfer_Confirmation_Date__c</formula>
        <inlineHelpText>Utility SREC Delivery Transfer Confirmation Date</inlineHelpText>
        <label>Delivery Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Counterparty__c</fullName>
        <description>Delivery Counterparty</description>
        <formula>Utility_SREC_Delivery__r.Utility_SREC_Contract__r.Counterparty_Account__r.Name</formula>
        <inlineHelpText>Delivery Counterparty</inlineHelpText>
        <label>Delivery Counterparty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Initiation_Date__c</fullName>
        <description>Transfer Initiation Date on Delivery</description>
        <formula>Utility_SREC_Delivery__r.Transfer_Initiation_Date__c</formula>
        <inlineHelpText>Transfer Initiation Date on Delivery</inlineHelpText>
        <label>Delivery Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Price_SREC__c</fullName>
        <description>Net Delivery Price [Price - Commission] ($/SREC)</description>
        <formula>Utility_SREC_Delivery__r.Contract_Price_per_SREC__c - Utility_SREC_Delivery__r.Utility_SREC_Contract__r.Brokerage_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Delivery Price [Price - Commission] ($/SREC)</inlineHelpText>
        <label>Delivery Price ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Compliance_Year__c</fullName>
        <description>Energy Compliance Year</description>
        <formula>IF(TEXT(State__c) =&apos;DE&apos;,IF(VALUE(LEFT( Vintage__c ,2))&lt;6,TEXT(VALUE(RIGHT(Vintage__c,4))-1)+&apos;-&apos;+RIGHT(Vintage__c,4),RIGHT(Vintage__c,4)+&apos;-&apos;+TEXT(VALUE(RIGHT(Vintage__c,4))+1)),IF(VALUE(LEFT( Vintage__c ,2))&lt;6,RIGHT(Vintage__c,4),TEXT(VALUE(RIGHT(Vintage__c,4))+1)))</formula>
        <inlineHelpText>Energy Compliance Year</inlineHelpText>
        <label>Energy Compliance Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <description>Facility Name</description>
        <inlineHelpText>Facility Name</inlineHelpText>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATS_GIS_Unit_Id__c</fullName>
        <description>Unit ID in GATS/GIS</description>
        <inlineHelpText>Unit ID in GATS/GIS</inlineHelpText>
        <label>GATS/GIS Unit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Installed System Generating This SREC</description>
        <inlineHelpText>Installed System Generating This SREC</inlineHelpText>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Customer Generated SRECs</relationshipLabel>
        <relationshipName>Customer_Generated_SRECs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_if_applicable__c</fullName>
        <description>IF APPLICABLE - Previous Owner</description>
        <inlineHelpText>IF APPLICABLE - Previous Owner</inlineHelpText>
        <label>Previous Owner (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Paid_to_Customer_SREC__c</fullName>
        <description>Price Received From Utility ($/SREC)</description>
        <inlineHelpText>Price Received From Utility ($/SREC)</inlineHelpText>
        <label>Price Paid to Customer ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Received_From_Utility_SREC__c</fullName>
        <description>Price Received From Utility ($/SREC)</description>
        <formula>Utility_SREC_Delivery__r.Contract_Price_per_SREC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Received From Utility ($/SREC)</inlineHelpText>
        <label>Price Received From Utility ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of SRECs</description>
        <inlineHelpText>Number of SRECs</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_DC__c</fullName>
        <description>SREC Certification Number - DC</description>
        <inlineHelpText>SREC Certification Number - DC</inlineHelpText>
        <label>SREC Certification Number - DC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_DE__c</fullName>
        <description>SREC Certification Number - DE</description>
        <inlineHelpText>SREC Certification Number - DE</inlineHelpText>
        <label>SREC Certification Number - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_IL__c</fullName>
        <description>SREC Certification Number - IL</description>
        <inlineHelpText>SREC Certification Number - IL</inlineHelpText>
        <label>SREC Certification Number - IL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_MA__c</fullName>
        <description>SREC Certification Number - MA</description>
        <inlineHelpText>SREC Certification Number - MA</inlineHelpText>
        <label>SREC Certification Number - MA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_MD__c</fullName>
        <description>SREC Certification Number - MD</description>
        <inlineHelpText>SREC Certification Number - MD</inlineHelpText>
        <label>SREC Certification Number - MD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_NJ__c</fullName>
        <description>SREC Certification Number - NJ</description>
        <inlineHelpText>SREC Certification Number - NJ</inlineHelpText>
        <label>SREC Certification Number - NJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_OH__c</fullName>
        <description>SREC Certification Number - OH</description>
        <inlineHelpText>SREC Certification Number - OH</inlineHelpText>
        <label>SREC Certification Number - OH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Certification_Number_PA__c</fullName>
        <description>SREC Certification Number - PA</description>
        <inlineHelpText>SREC Certification Number - PA</inlineHelpText>
        <label>SREC Certification Number - PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial Number</description>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_DC__c</fullName>
        <description>System Certification Number - DC</description>
        <formula>Installed_System__r.Certification_Number_DC__c</formula>
        <inlineHelpText>System Certification Number - DC</inlineHelpText>
        <label>System Certification Number - DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_DE__c</fullName>
        <description>System Certification Number - DE</description>
        <formula>Installed_System__r.Certification_Number_DE__c</formula>
        <inlineHelpText>System Certification Number - DE</inlineHelpText>
        <label>System Certification Number - DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_IL__c</fullName>
        <description>System Certification Number - IL</description>
        <formula>Installed_System__r.Certification_Number_IL__c</formula>
        <inlineHelpText>System Certification Number - IL</inlineHelpText>
        <label>System Certification Number - IL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_MA__c</fullName>
        <description>System Certification Number - MA</description>
        <formula>Installed_System__r.Certification_Number_MA__c</formula>
        <inlineHelpText>System Certification Number - MA</inlineHelpText>
        <label>System Certification Number - MA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_MD__c</fullName>
        <description>System Certification Number - MD</description>
        <formula>Installed_System__r.Certification_Number_MD__c</formula>
        <inlineHelpText>System Certification Number - MD</inlineHelpText>
        <label>System Certification Number - MD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_NJ__c</fullName>
        <description>System Certification Number - NJ</description>
        <formula>Installed_System__r.Certification_Number_NJ__c</formula>
        <inlineHelpText>System Certification Number - NJ</inlineHelpText>
        <label>System Certification Number - NJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_OH__c</fullName>
        <description>System Certification Number - OH</description>
        <formula>Installed_System__r.Certification_Number_OH__c</formula>
        <inlineHelpText>System Certification Number - OH</inlineHelpText>
        <label>System Certification Number - OH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification_Number_PA__c</fullName>
        <description>System Certification Number - PA</description>
        <formula>Installed_System__r.Certification_Number_PA__c</formula>
        <inlineHelpText>System Certification Number - PA</inlineHelpText>
        <label>System Certification Number - PA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Unique Transaction Identifier in GATS</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Transaction Identifier in GATS</inlineHelpText>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_SREC_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Utility SREC Delivery</description>
        <inlineHelpText>Utility SREC Delivery</inlineHelpText>
        <label>Utility SREC Delivery</label>
        <referenceTo>Utility_SREC_Delivery__c</referenceTo>
        <relationshipLabel>Customer Generated SRECs</relationshipLabel>
        <relationshipName>Customer_Generated_SRECs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vintage__c</fullName>
        <description>Vintage</description>
        <inlineHelpText>Vintage</inlineHelpText>
        <label>Vintage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Generated SREC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Installed_System__c</columns>
        <columns>System_Certification_Number_DC__c</columns>
        <columns>System_Certification_Number_DE__c</columns>
        <columns>System_Certification_Number_IL__c</columns>
        <columns>System_Certification_Number_MA__c</columns>
        <columns>System_Certification_Number_MD__c</columns>
        <columns>System_Certification_Number_NJ__c</columns>
        <columns>System_Certification_Number_OH__c</columns>
        <columns>System_Certification_Number_PA__c</columns>
        <columns>Quantity__c</columns>
        <columns>State__c</columns>
        <columns>Utility_SREC_Delivery__c</columns>
        <columns>Price_Paid_to_Customer_SREC__c</columns>
        <columns>Date_Customer_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CUSTOMER-SREC-{0000000000}</displayFormat>
        <label>SREC Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Generated SRECs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>